crates/cpg-schema/tests/snapshots/contracts__flow_test_types.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table flow_test_types
family flow
key snapshot_id, module_node_id, leaf_fact_id, use_id, fact_id
check operand_span_order: operand_start_byte >= 0 AND operand_end_byte > operand_start_byte
check tested_place_role: role = 'tested_place'
@lctx.family=flow
@lctx.table=flow_test_types
snapshot_id: FixedSizeBinary(16) NOT NULL
fact_id: FixedSizeBinary(16) NOT NULL
module_node_id: FixedSizeBinary(16) NOT NULL
leaf_fact_id: FixedSizeBinary(16) NOT NULL
atom_id: FixedSizeBinary(16) NOT NULL
use_id: FixedSizeBinary(16) NOT NULL
use_fact_id: FixedSizeBinary(16) NOT NULL
operand_start_byte: Int64 NOT NULL
operand_end_byte: Int64 NOT NULL
role: Utf8 NOT NULL
place: Utf8 NOT NULL
term_node_id: FixedSizeBinary(16) NOT NULL
term_fact_id: FixedSizeBinary(16) NOT NULL
origin: Int16 NOT NULL [lctx.codebook=test_type_origin]
