crates/cpg-schema/tests/snapshots/contracts__flow_test_value_links.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table flow_test_value_links
family findings
key snapshot_id, operation_node_id, formal_node_id, leaf_fact_id, use_id
check operand_span_order: operand_start_byte >= 0 AND operand_end_byte > operand_start_byte
@lctx.family=findings
@lctx.table=flow_test_value_links
snapshot_id: FixedSizeBinary(16) NOT NULL
link_id: FixedSizeBinary(16) NOT NULL
operation_node_id: FixedSizeBinary(16) NOT NULL
formal_node_id: FixedSizeBinary(16) NOT NULL
module_node_id: FixedSizeBinary(16) NOT NULL
leaf_fact_id: FixedSizeBinary(16) NOT NULL
atom_id: FixedSizeBinary(16) NOT NULL
use_id: FixedSizeBinary(16) NOT NULL
use_fact_id: FixedSizeBinary(16) NOT NULL
reaching_fact_id: FixedSizeBinary(16) NOT NULL
definition_fact_id: FixedSizeBinary(16) NOT NULL
operand_start_byte: Int64 NOT NULL
operand_end_byte: Int64 NOT NULL
place: Utf8 NOT NULL
condition_id: FixedSizeBinary(16) NOT NULL
origin: Int16 NOT NULL [lctx.codebook=test_value_link_origin]
effect_model_digest: FixedSizeBinary(32) NOT NULL
