crates/cpg-schema/tests/snapshots/contracts__flow_uses.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table flow_uses
family flow
key snapshot_id, module_node_id, start_byte, end_byte, fact_id
check span_order: start_byte >= 0 AND end_byte >= start_byte
@lctx.family=flow
@lctx.table=flow_uses
snapshot_id: FixedSizeBinary(16) NOT NULL
fact_id: FixedSizeBinary(16) NOT NULL
use_id: FixedSizeBinary(16) NOT NULL
module_node_id: FixedSizeBinary(16) NOT NULL
place: Utf8 NOT NULL
scope_kind: Int16 NOT NULL [lctx.codebook=lexical_scope_kind]
scope_start_byte: Int64 NULL
scope_end_byte: Int64 NULL
start_byte: Int64 NOT NULL
end_byte: Int64 NOT NULL
annotation: Boolean NOT NULL
